[package]
name = "cliff"
version = "0.0.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "An AWS CloudFormation stack diff tool"

[dependencies]
colored = "1.8"
env_logger = "0.6"
futures = "0.1"
futures-backoff = "0.1"
lazy_static = "1.3"
log = "0.4"
rusoto_cloudformation = "0.40"
rusoto_core = "0.40"
serde = { version = "1.0", features = ["derive"]}
serde-xml-rs = "0.3"
structopt = "0.2"
tempfile = "3.1"
tokio = "0.1"

[dev-dependencies]
bytes = "0.4"