[package]
name = "cliff"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2018"
description = "An AWS CloudFormation stack diff tool"

[dependencies]
colored = "1.9"
env_logger = "0.7"
futures = "0.1"
futures-backoff = "0.1"
lazy_static = "1.4"
log = "0.4"
rusoto_cloudformation = { version = "0.41",  default_features = false, features = ["rustls"] }
rusoto_core = { version = "0.41", default_features = false, features = ["rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.3"
structopt = "0.3"
tempfile = "3.1"
tokio = "0.1"

[dev-dependencies]
bytes = "0.4"